--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 /**
 * @license
 *
@@ -29,114 +28,114 @@
 *
 */
 @font-face {
-    font-family: 'GeneralSans-Extralight';
-    src: url('./fonts/GeneralSans-Bold.eot') format('woff2'),
-         url('./fonts/GeneralSans-Extralight.woff') format('woff'),
-         url('./fonts/GeneralSans-Extralight.ttf') format('truetype');
-    font-weight: 200;
-    font-display: swap;
-    font-style: normal;
-  }
-  @font-face {
-    font-family: 'GeneralSans-ExtralightItalic';
-    src: url('./fonts/GeneralSans-ExtralightItalic.woff2') format('woff2'),
-         url('./fonts/GeneralSans-ExtralightItalic.woff') format('woff'),
-         url('./fonts/GeneralSans-ExtralightItalic.ttf') format('truetype');
-    font-weight: 200;
-    font-display: swap;
-    font-style: italic;
-  }
-  @font-face {
-    font-family: 'GeneralSans-Light';
-    src: url('./fonts/GeneralSans-Light.woff2') format('woff2'),
-         url('./fonts/GeneralSans-Light.woff') format('woff'),
-         url('./fonts/GeneralSans-Light.ttf') format('truetype');
-    font-weight: 300;
-    font-display: swap;
-    font-style: normal;
-  }
-  @font-face {
-    font-family: 'GeneralSans-LightItalic';
-    src: url('./fonts/GeneralSans-LightItalic.woff2') format('woff2'),
-         url('./fonts/GeneralSans-LightItalic.woff') format('woff'),
-         url('./fonts/GeneralSans-LightItalic.ttf') format('truetype');
-    font-weight: 300;
-    font-display: swap;
-    font-style: italic;
-  }
-  @font-face {
-    font-family: 'GeneralSans-Regular';
-    src: url('./fonts/GeneralSans-Regular.woff2') format('woff2'),
-         url('./fonts/GeneralSans-Regular.woff') format('woff'),
-         url('./fonts/GeneralSans-Regular.ttf') format('truetype');
-    font-weight: 400;
-    font-display: swap;
-    font-style: normal;
-  }
-  @font-face {
-    font-family: 'GeneralSans-Italic';
-    src: url('./fonts/GeneralSans-Italic.woff2') format('woff2'),
-         url('./fonts/GeneralSans-Italic.woff') format('woff'),
-         url('./fonts/GeneralSans-Italic.ttf') format('truetype');
-    font-weight: 400;
-    font-display: swap;
-    font-style: italic;
-  }
-  @font-face {
-    font-family: 'GeneralSans-Medium';
-    src: url('./fonts/GeneralSans-Medium.woff2') format('woff2'),
-         url('./fonts/GeneralSans-Medium.woff') format('woff'),
-         url('./fonts/GeneralSans-Medium.ttf') format('truetype');
-    font-weight: 500;
-    font-display: swap;
-    font-style: normal;
-  }
-  @font-face {
-    font-family: 'GeneralSans-MediumItalic';
-    src: url('./fonts/GeneralSans-MediumItalic.woff2') format('woff2'),
-         url('./fonts/GeneralSans-MediumItalic.woff') format('woff'),
-         url('./fonts/GeneralSans-MediumItalic.ttf') format('truetype');
-    font-weight: 500;
-    font-display: swap;
-    font-style: italic;
-  }
-  @font-face {
-    font-family: 'GeneralSans-Semibold';
-    src: url('./fonts/GeneralSans-Semibold.woff2') format('woff2'),
-         url('./fonts/GeneralSans-Semibold.woff') format('woff'),
-         url('./fonts/GeneralSans-Semibold.ttf') format('truetype');
-    font-weight: 600;
-    font-display: swap;
-    font-style: normal;
-  }
-  @font-face {
-    font-family: 'GeneralSans-SemiboldItalic';
-    src: url('./fonts/GeneralSans-SemiboldItalic.woff2') format('woff2'),
-         url('./fonts/GeneralSans-SemiboldItalic.woff') format('woff'),
-         url('./fonts/GeneralSans-SemiboldItalic.ttf') format('truetype');
-    font-weight: 600;
-    font-display: swap;
-    font-style: italic;
-  }
-  @font-face {
-    font-family: 'GeneralSans-Bold';
-    src: url('./fonts/GeneralSans-Bold.woff2') format('woff2'),
-         url('./fonts/GeneralSans-Bold.woff') format('woff'),
-         url('./fonts/GeneralSans-Bold.ttf') format('truetype');
-    font-weight: 700;
-    font-display: swap;
-    font-style: normal;
-  }
-  @font-face {
-    font-family: 'GeneralSans-BoldItalic';
-    src: url('./fonts/GeneralSans-BoldItalic.woff2') format('woff2'),
-         url('./fonts/GeneralSans-BoldItalic.woff') format('woff'),
-         url('./fonts/GeneralSans-BoldItalic.ttf') format('truetype');
-    font-weight: 700;
-    font-display: swap;
-    font-style: italic;
-  }
-  /**
+  font-family: "GeneralSans-Extralight";
+  src: url("./fonts/GeneralSans-Bold.eot") format("woff2"),
+    url("./fonts/GeneralSans-Extralight.woff") format("woff"),
+    url("./fonts/GeneralSans-Extralight.ttf") format("truetype");
+  font-weight: 200;
+  font-display: swap;
+  font-style: normal;
+}
+@font-face {
+  font-family: "GeneralSans-ExtralightItalic";
+  src: url("./fonts/GeneralSans-ExtralightItalic.woff2") format("woff2"),
+    url("./fonts/GeneralSans-ExtralightItalic.woff") format("woff"),
+    url("./fonts/GeneralSans-ExtralightItalic.ttf") format("truetype");
+  font-weight: 200;
+  font-display: swap;
+  font-style: italic;
+}
+@font-face {
+  font-family: "GeneralSans-Light";
+  src: url("./fonts/GeneralSans-Light.woff2") format("woff2"),
+    url("./fonts/GeneralSans-Light.woff") format("woff"),
+    url("./fonts/GeneralSans-Light.ttf") format("truetype");
+  font-weight: 300;
+  font-display: swap;
+  font-style: normal;
+}
+@font-face {
+  font-family: "GeneralSans-LightItalic";
+  src: url("./fonts/GeneralSans-LightItalic.woff2") format("woff2"),
+    url("./fonts/GeneralSans-LightItalic.woff") format("woff"),
+    url("./fonts/GeneralSans-LightItalic.ttf") format("truetype");
+  font-weight: 300;
+  font-display: swap;
+  font-style: italic;
+}
+@font-face {
+  font-family: "GeneralSans-Regular";
+  src: url("./fonts/GeneralSans-Regular.woff2") format("woff2"),
+    url("./fonts/GeneralSans-Regular.woff") format("woff"),
+    url("./fonts/GeneralSans-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-display: swap;
+  font-style: normal;
+}
+@font-face {
+  font-family: "GeneralSans-Italic";
+  src: url("./fonts/GeneralSans-Italic.woff2") format("woff2"),
+    url("./fonts/GeneralSans-Italic.woff") format("woff"),
+    url("./fonts/GeneralSans-Italic.ttf") format("truetype");
+  font-weight: 400;
+  font-display: swap;
+  font-style: italic;
+}
+@font-face {
+  font-family: "GeneralSans-Medium";
+  src: url("./fonts/GeneralSans-Medium.woff2") format("woff2"),
+    url("./fonts/GeneralSans-Medium.woff") format("woff"),
+    url("./fonts/GeneralSans-Medium.ttf") format("truetype");
+  font-weight: 500;
+  font-display: swap;
+  font-style: normal;
+}
+@font-face {
+  font-family: "GeneralSans-MediumItalic";
+  src: url("./fonts/GeneralSans-MediumItalic.woff2") format("woff2"),
+    url("./fonts/GeneralSans-MediumItalic.woff") format("woff"),
+    url("./fonts/GeneralSans-MediumItalic.ttf") format("truetype");
+  font-weight: 500;
+  font-display: swap;
+  font-style: italic;
+}
+@font-face {
+  font-family: "GeneralSans-Semibold";
+  src: url("./fonts/GeneralSans-Semibold.woff2") format("woff2"),
+    url("./fonts/GeneralSans-Semibold.woff") format("woff"),
+    url("./fonts/GeneralSans-Semibold.ttf") format("truetype");
+  font-weight: 600;
+  font-display: swap;
+  font-style: normal;
+}
+@font-face {
+  font-family: "GeneralSans-SemiboldItalic";
+  src: url("./fonts/GeneralSans-SemiboldItalic.woff2") format("woff2"),
+    url("./fonts/GeneralSans-SemiboldItalic.woff") format("woff"),
+    url("./fonts/GeneralSans-SemiboldItalic.ttf") format("truetype");
+  font-weight: 600;
+  font-display: swap;
+  font-style: italic;
+}
+@font-face {
+  font-family: "GeneralSans-Bold";
+  src: url("./fonts/GeneralSans-Bold.woff2") format("woff2"),
+    url("./fonts/GeneralSans-Bold.woff") format("woff"),
+    url("./fonts/GeneralSans-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-display: swap;
+  font-style: normal;
+}
+@font-face {
+  font-family: "GeneralSans-BoldItalic";
+  src: url("./fonts/GeneralSans-BoldItalic.woff2") format("woff2"),
+    url("./fonts/GeneralSans-BoldItalic.woff") format("woff"),
+    url("./fonts/GeneralSans-BoldItalic.ttf") format("truetype");
+  font-weight: 700;
+  font-display: swap;
+  font-style: italic;
+}
+/**
   * This is a variable font
   * You can control variable axes as shown below:
   * font-variation-settings: wght 700.0;
@@ -144,16 +143,16 @@
   * available axes:
   'wght' (range from 200.0 to 700.0
   */
-  @font-face {
-    font-family: 'GeneralSans-Variable';
-    src: url('./fonts/GeneralSans-Variable.woff2') format('woff2'),
-         url('./fonts/GeneralSans-Variable.woff') format('woff'),
-         url('./fonts/GeneralSans-Variable.ttf') format('truetype');
-    font-weight: 200 700;
-    font-display: swap;
-    font-style: normal;
-  }
-  /**
+@font-face {
+  font-family: "GeneralSans-Variable";
+  src: url("./fonts/GeneralSans-Variable.woff2") format("woff2"),
+    url("./fonts/GeneralSans-Variable.woff") format("woff"),
+    url("./fonts/GeneralSans-Variable.ttf") format("truetype");
+  font-weight: 200 700;
+  font-display: swap;
+  font-style: normal;
+}
+/**
   * This is a variable font
   * You can control variable axes as shown below:
   * font-variation-settings: wght 700.0;
@@ -161,72 +160,74 @@
   * available axes:
   'wght' (range from 200.0 to 700.0
   */
-  @font-face {
-    font-family: 'GeneralSans-VariableItalic';
-    src: url('./fonts/GeneralSans-VariableItalic.woff2') format('woff2'),
-         url('./fonts/GeneralSans-VariableItalic.woff') format('woff'),
-         url('./fonts/GeneralSans-VariableItalic.ttf') format('truetype');
-    font-weight: 200 700;
-    font-display: swap;
-    font-style: italic;
-  }
-
-  @font-face {
-    font-family: 'Aquire';
-    src: url('./fonts/Aquire-BW0ox.woff') format('woff'),
-  }
-  @font-face {
-    font-family: 'Aquire-bold';
-    src: url('./fonts/AquireBold-8Ma60.woff') format('woff'),
-  }
-  @font-face {
-    font-family: 'Aquire-light';
-    src: url('./fonts/AquireLight-YzE0o.woff') format('woff'),
-  }
-  @font-face {
-    font-family: 'monument';
-    src: url('./fonts/MonumentExtended-Regular.woff') format('woff'),
-  }
-  @font-face {
-    font-family: 'monument-bold';
-    src: url('./fonts/MonumentExtended-Ultrabold.woff') format('woff'),
-  }
-  
-  
-*{
-    font-family: 'GeneralSans-Regular';
+@font-face {
+  font-family: "GeneralSans-VariableItalic";
+  src: url("./fonts/GeneralSans-VariableItalic.woff2") format("woff2"),
+    url("./fonts/GeneralSans-VariableItalic.woff") format("woff"),
+    url("./fonts/GeneralSans-VariableItalic.ttf") format("truetype");
+  font-weight: 200 700;
+  font-display: swap;
+  font-style: italic;
 }
 
-body,html{
-  width: 100vw;
+@font-face {
+  font-family: "Aquire";
+  src: url("./fonts/Aquire-BW0ox.woff") format("woff");
+}
+@font-face {
+  font-family: "Aquire-bold";
+  src: url("./fonts/AquireBold-8Ma60.woff") format("woff");
+}
+@font-face {
+  font-family: "Aquire-light";
+  src: url("./fonts/AquireLight-YzE0o.woff") format("woff");
+}
+@font-face {
+  font-family: "monument";
+  src: url("./fonts/MonumentExtended-Regular.woff") format("woff");
+}
+@font-face {
+  font-family: "monument-bold";
+  src: url("./fonts/MonumentExtended-Ultrabold.woff") format("woff");
+}
+
+* {
+  font-family: "GeneralSans-Regular";
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body,
+html {
+  width: 100%;
+  min-height: 100vh;
   overflow-x: hidden;
-
+  scroll-behavior: smooth;
+  background: #000;
+  color: #fff;
 }
-
-
 
 /* width */
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 6px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px rgb(59, 59, 59); 
-  border-radius: 10px;
-  background-color: #000000;
+  background: transparent;
 }
- 
+
 /* Default styling for scrollbar thumb */
 ::-webkit-scrollbar-thumb {
-  background: rgb(48, 48, 48); /* Background color of the scrollbar thumb */
-  border-radius: 10px; /* Border radius to round the corners of the thumb */
-  transition: background-color 0.2s ease-in-out; /* Smooth transition duration and easing function */
+  background: #333;
+  border-radius: 3px;
+  transition: background-color 0.2s ease-in-out;
 }
 
 /* Styling for scrollbar thumb on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #5f5f5f; /* Background color of the scrollbar thumb on hover */
+  background: #444;
 }
 
 input::-webkit-outer-spin-button,
@@ -236,6 +237,6 @@ input::-webkit-inner-spin-button {
 }
 
 /* Firefox */
-input[type=number] {
+input[type="number"] {
   -moz-appearance: textfield;
 }
